--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -8,7 +8,7 @@
     "description": "扩展描述"
   },
   "contextMenuQuickAdd": {
-    "message": "添加域名到 Oasis"
+    "message": "快捷添加域名"
   },
   "directConnect": {
     "message": "直接连接"
@@ -37,12 +37,6 @@
   "options": {
       "message": "选项"
   },
-  "cancel": {
-      "message": "取消"
-  },
-  "confirm": {
-      "message": "确认"
-  },
   "addTo": {
       "message": "添加到"
   },
@@ -64,7 +58,7 @@
   "unnamedPAC": { "message": "未命名 PAC" },
   "sectionBasic": { "message": "基本配置" },
   "lblTheme": { "message": "主题" },
-  "descTheme": { "message": "选择您喜欢的主题风格。" },
+  "descTheme": { "message": "设置界面的显示主题。" },
   "lblUpdateCycle": { "message": "外部策略更新周期" },
   "descUpdateCycle": { "message": "检查策略更新的频率。" },
   "lblRulePriority": { "message": "规则优先级" },
@@ -74,21 +68,21 @@
   "prioTemp": { "message": "临时" },
   "btnReset": { "message": "重置为默认值" },
   "lblRefreshSwitch": { "message": "切换时刷新" },
-  "descRefreshSwitch": { "message": "切换代理时自动刷新标签页。" },
+  "descRefreshSwitch": { "message": "切换代理时自动刷新当前页面。" },
   "sectionAdvanced": { "message": "高级配置" },
   "lblRejectAddr": { "message": "拒绝地址" },
-  "descRejectAddr": { "message": "连接到此地址将被立即断开。" },
+  "descRejectAddr": { "message": "发送到此地址的连接将被立即阻断。" },
   "lblReqMonitor": { "message": "请求监视器" },
-  "descReqMonitor": { "message": "监视请求及其匹配的代理规则。" },
+  "descReqMonitor": { "message": "记录实时请求及其匹配的代理规则。" },
   "lblContextMenu": { "message": "右键菜单" },
   "descContextMenu": { "message": "在浏览器右键菜单中显示代理选项。" },
   "lblIpTags": { "message": "IP 标签" },
-  "descIpTags": { "message": "为 IP 地址分配友好名称。" },
+  "descIpTags": { "message": "为 IP 地址设置易记的标签。" },
   "btnAddTag": { "message": "添加标签" },
   "colIp": { "message": "IP 地址" },
   "colTag": { "message": "标签名称" },
   "colAction": { "message": "操作" },
-  "noTags": { "message": "未定义标签。" },
+  "noTags": { "message": "暂无标签。" },
   "sectionInfo": { "message": "扩展信息" },
   "lblVersion": { "message": "扩展版本" },
   "descVersion": { "message": "Oasis当前版本" },
@@ -100,12 +94,12 @@
   "themeDark": { "message": "暗色" },
   "themeSystem": { "message": "系统" },
   "themeManual": { "message": "手动" },
-  "msgProxyCreated": { "message": "代理主机创建成功" },
-  "msgPACCreated": { "message": "PAC 脚本创建成功" },
-  "msgPolicyCreated": { "message": "策略创建成功" },
-  "msgGroupCreated": { "message": "代理组创建成功" },
-  "msgTagSaved": { "message": "IP 标签已保存" },
-  "msgTagDeleted": { "message": "IP 标签已删除" },
+  "msgProxyCreated": { "message": "代理主机已创建" },
+  "msgPACCreated": { "message": "PAC 脚本已创建" },
+  "msgPolicyCreated": { "message": "策略已创建" },
+  "msgGroupCreated": { "message": "代理组已创建" },
+  "msgTagSaved": { "message": "标签已保存" },
+  "msgTagDeleted": { "message": "标签已删除" },
   "btnCancel": { "message": "取消" },
   "btnConfirm": { "message": "确认" },
   "btnSave": { "message": "保存" },
@@ -130,32 +124,32 @@
   "phTitleShowPopup": { "message": "是否在扩展弹窗页面中显示" },
   "phPlaceholderHost": { "message": "example.com 或 1.2.3.4" },
   "phPlaceholderOptional": { "message": "可选" },
-  "phMsgUnsaved": { "message": "您有未保存的更改。请在离开前保存或重置。" },
-  "phMsgSaved": { "message": "代理保存成功" },
-  "phMsgRenameDirty": { "message": "请在重命名前保存或重置您的更改" },
-  "phMsgCloneDirty": { "message": "请在克隆前保存或重置您的更改" },
+  "phMsgUnsaved": { "message": "存在未保存的更改，请在离开前保存或重置。" },
+  "phMsgSaved": { "message": "代理配置已保存" },
+  "phMsgRenameDirty": { "message": "重命名前请先保存或重置更改" },
+  "phMsgCloneDirty": { "message": "克隆前请先保存或重置更改" },
   "phMsgDeleteUsed": { "message": "无法删除代理。它正被以下策略使用：" },
-  "phMsgRenamed": { "message": "代理重命名成功" },
-  "phMsgCloned": { "message": "代理克隆成功" },
-  "phMsgDeleted": { "message": "代理删除成功" },
+  "phMsgRenamed": { "message": "代理已重命名" },
+  "phMsgCloned": { "message": "代理已克隆" },
+  "phMsgDeleted": { "message": "代理已删除" },
   "phDefault": { "message": "默认" },
   "pcmTitle": { "message": "添加代理主机" },
   "pcmPlaceholderName": { "message": "例如：公司代理" },
-  "pcmDescName": { "message": "此名称将用于识别您的代理主机。" },
+  "pcmDescName": { "message": "用于标识代理主机的名称。" },
   "pocmTitle": { "message": "创建新策略" },
   "pocmPlaceholderName": { "message": "例如：公司网络、家庭规则" },
-  "pocmDescName": { "message": "此名称将用于识别您的策略。" },
+  "pocmDescName": { "message": "用于标识策略的名称。" },
   "pocmDescAuto": { "message": "灵活的规则集" },
   "pocmDescPac": { "message": "自定义 JS 脚本" },
   "pgcmTitle": { "message": "添加代理主机组" },
   "pgcmPlaceholderName": { "message": "例如：故障转移组 1" },
-  "pgcmDescName": { "message": "此名称将用于识别您的代理组。" },
+  "pgcmDescName": { "message": "用于标识代理组的名称。" },
   "lblUntitled": { "message": "无标题" },
   "lblRequestsSuffix": { "message": "个请求" },
   "lblProxyHosts": { "message": "代理主机" },
   "lblPolicies": { "message": "策略" },
   "btnBatchReplace": { "message": "批量替换" },
-  "msgPolicySaved": { "message": "策略保存成功" },
+  "msgPolicySaved": { "message": "策略已保存" },
 
   "phHeaderNormalRules": { "message": "普通规则" },
   "phHeaderRejectRules": { "message": "拒绝规则" },
@@ -226,8 +220,9 @@
   "popTooltipOptions": { "message": "选项" },
   "popMsgMonitorUnavailable": { "message": "监控不可用。" },
   "popMsgMonitorOnlyHttp": { "message": "仅支持 HTTP/HTTPS 页面。" },
-  "popMsgNoRequests": { "message": "未记录到请求。" },
-  "popMsgRefreshHint": { "message": "刷新页面以捕获流量。" },
+  "popMsgRefreshHint": {
+    "message": "刷新页面以捕获新请求。"
+  },
   "popTooltipMonitor": { "message": "打开监视器" },
   "lblHistory": { "message": "历史记录:" },
   "phSearchRequests": { "message": "搜索请求 (例如 google, POST)" },
@@ -272,12 +267,12 @@
   "btnPushToCloud": { "message": "推送到云端" },
   "btnPullFromCloud": { "message": "从云端拉取" },
   "msgAutoSyncEnabled": { "message": "自动同步已启用" },
-  "msgSyncedToCloud": { "message": "已成功同步到云端" },
-  "msgSyncedFromCloud": { "message": "已成功从云端同步" },
+  "msgSyncedToCloud": { "message": "已同步到云端" },
+  "msgSyncedFromCloud": { "message": "已从云端同步" },
   "msgSyncFromCloudFailed": { "message": "从云端同步失败（为空或错误）" },
   "msgLocalPushedAutoSync": { "message": "本地版本已推送到云端。自动同步已启用。" },
   "msgSyncedFromCloudAutoSync": { "message": "已从云端同步。自动同步已启用。" },
-  "msgConfigImported": { "message": "配置导入成功" },
+  "msgConfigImported": { "message": "配置已导入" },
   "msgConfigImportFailed": { "message": "配置导入失败" },
   "msgInvalidConfig": { "message": "无效的配置文件" },
   "msgConfigExported": { "message": "配置已导出" },
@@ -308,7 +303,7 @@
   "btnRefresh": { "message": "刷新" },
   "lblChooseColor": { "message": "选择颜色" },
   "pacPlaceholderUrl": { "message": "https://example.com/config.pac" },
-  "pacPlaceholderScript": { "message": "// 在此输入您的 PAC 脚本\nfunction FindProxyForURL(url, host) {\n  return 'DIRECT';\n}" },
+  "pacPlaceholderScript": { "message": "// 在此输入 PAC 脚本\nfunction FindProxyForURL(url, host) {\n  return 'DIRECT';\n}" },
   "pacHeaderSource": { "message": "PAC 来源" },
   "pacHeaderScript": { "message": "脚本内容" },
   "pacLabelSourceMethod": { "message": "来源方式" },
@@ -316,13 +311,13 @@
   "pacLabelManualScript": { "message": "手动脚本" },
   "pacMsgReadOnly": { "message": "只读" },
   "pacMsgEditable": { "message": "可编辑" },
-  "pacMsgUnsaved": { "message": "您有未保存的更改。请在离开前保存或重置。" },
-  "pacMsgSaved": { "message": "PAC 脚本保存成功" },
-  "pacMsgRenamed": { "message": "PAC 脚本重命名成功" },
-  "pacMsgCloned": { "message": "PAC 脚本克隆成功" },
-  "pacMsgDeleted": { "message": "PAC 脚本删除成功" },
-  "pacMsgSaveBeforeRenaming": { "message": "请在重命名前保存或重置您的更改" },
-  "pacMsgSaveBeforeCloning": { "message": "请在克隆前保存或重置您的更改" },
+  "pacMsgUnsaved": { "message": "存在未保存的更改，请在离开前保存或重置。" },
+  "pacMsgSaved": { "message": "PAC 脚本已保存" },
+  "pacMsgRenamed": { "message": "PAC 脚本已重命名" },
+  "pacMsgCloned": { "message": "PAC 脚本已克隆" },
+  "pacMsgDeleted": { "message": "PAC 脚本已删除" },
+  "pacMsgSaveBeforeRenaming": { "message": "重命名前请先保存或重置更改" },
+  "pacMsgSaveBeforeCloning": { "message": "克隆前请先保存或重置更改" },
   "pgHeaderFallback": { "message": "故障转移组" },
   "pgHeaderStrategy": { "message": "终止策略" },
   "pgLabelFinalFallback": { "message": "最终回退" },
@@ -335,7 +330,7 @@
   "pgMsgNoProxies": { "message": "此组中没有代理。添加代理以创建故障转移链。" },
   "pgOptionSelectProxy": { "message": "选择代理..." },
   "pgMsgNoMoreProxies": { "message": "没有更多可用的代理" },
-  "pgMsgSaved": { "message": "组保存成功" },
+  "pgMsgSaved": { "message": "组配置已保存" },
   "pgMsgDeleted": { "message": "组已删除" },
   "pgMsgSaveFirst": { "message": "请先保存更改" },
   "tempTitle": { "message": "临时规则" },
@@ -356,7 +351,7 @@
   "rscmBtnUpdating": { "message": "更新中..." },
   "rscmMsgNever": { "message": "从未" },
   "armTitle": { "message": "接受规则" },
-  "armDesc": { "message": "您即将添加 $COUNT$ 条规则到永久策略。", "placeholders": { "count": { "content": "$1" } } },
+  "armDesc": { "message": "即将添加 $COUNT$ 条规则到永久策略。", "placeholders": { "count": { "content": "$1" } } },
   "armLabelTarget": { "message": "目标策略" },
   "armPlaceholderTarget": { "message": "-- 选择目标策略 --" },
   "armLabelConflict": { "message": "冲突解决" },
@@ -372,7 +367,7 @@
   "smmmMsgOptimized": { "message": "已优化：$COUNT$ 条规则", "placeholders": { "count": { "content": "$1" } } },
   "smmmMsgNoSource": { "message": "未选择规则。" },
   "smmmMsgNoMerge": { "message": "没有可合并的规则。" },
-  "smmmDescOptimization": { "message": "规则已自动优化。您可以在合并前在此进一步编辑它们。" },
+  "smmmDescOptimization": { "message": "规则已自动优化，合并前可在此进一步编辑。" },
   "smmmBtnMerge": { "message": "合并 $COUNT$ 条规则", "placeholders": { "count": { "content": "$1" } } },
   "pgTitleAddProxy": { "message": "添加到组" },
   "btnRemove": { "message": "移除" },
@@ -404,8 +399,8 @@
   "pcmPlaceholder": { "message": "例如：代理副本 1" },
   "pdmTitle": { "message": "删除代理主机" },
   "pdmWarningTitle": { "message": "警告：破坏性操作" },
-  "pdmMsgDeleteConfirm": { "message": "您确定要删除" },
-  "pdmMsgDeleteIrreversible": { "message": "此操作无法撤销，将永久删除此配置。" },
-  "btnDeleteForever": { "message": "永久删除" },
+  "pdmMsgDeleteConfirm": { "message": "确定要删除" },
+  "pdmMsgDeleteIrreversible": { "message": "此操作不可逆，将永久删除此配置。" },
+  "btnDeleteForever": { "message": "确认删除" },
   "suffixCopy": { "message": " 副本" }
 }
