feat: Implement user-selectable UI language option in general settings.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -61,6 +61,11 @@
   "sectionBasic": { "message": "Basic Configuration" },
   "lblTheme": { "message": "Theme" },
   "descTheme": { "message": "Choose your preferred visual theme." },
+  "lblLanguage": { "message": "Language" },
+  "descLanguage": { "message": "Choose the display language." },
+  "langAuto": { "message": "Auto" },
+  "langEn": { "message": "English" },
+  "langZhCN": { "message": "Simplified Chinese" },
   "lblUpdateCycle": { "message": "External Policy Update Cycle" },
   "descUpdateCycle": { "message": "Frequency of checking for policy updates." },
   "lblRulePriority": { "message": "Rule Priority Order" },
