--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -59,6 +59,11 @@
   "sectionBasic": { "message": "基本配置" },
   "lblTheme": { "message": "主题" },
   "descTheme": { "message": "设置界面的显示主题。" },
+  "lblLanguage": { "message": "语言" },
+  "descLanguage": { "message": "选择显示语言。" },
+  "langAuto": { "message": "自动" },
+  "langEn": { "message": "English" },
+  "langZhCN": { "message": "简体中文" },
   "lblUpdateCycle": { "message": "外部策略更新周期" },
   "descUpdateCycle": { "message": "检查策略更新的频率。" },
   "lblRulePriority": { "message": "规则优先级" },
