feat: enhance i18n placeholder parsing to support named placeholders and localize ProxyHostDetail view labels.

--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -50,7 +50,7 @@
   "navGeneral": { "message": "通用设置" },
   "navDataSync": { "message": "数据同步" },
   "navTempRules": { "message": "临时规则" },
-  "navRequestMonitor": { "message": "请求监视器" },
+  "navRequestMonitor": { "message": "请求查看器" },
   "navProxyHosts": { "message": "代理主机" },
   "navProxyGroups": { "message": "代理组" },
   "navPolicyRules": { "message": "策略规则" },
@@ -67,17 +67,17 @@
   "lblUpdateCycle": { "message": "外部策略更新周期" },
   "descUpdateCycle": { "message": "检查策略更新的频率。" },
   "lblRulePriority": { "message": "规则优先级" },
-  "descRulePriority": { "message": "拖动以重新排序规则评估优先级。" },
+  "descRulePriority": { "message": "拖动以重新排序规则优先级。" },
   "prioReject": { "message": "拒绝" },
   "prioNormal": { "message": "正常" },
   "prioTemp": { "message": "临时" },
-  "btnReset": { "message": "重置为默认值" },
+  "btnReset": { "message": "重 置" },
   "lblRefreshSwitch": { "message": "切换时刷新" },
   "descRefreshSwitch": { "message": "切换代理时自动刷新当前页面。" },
   "sectionAdvanced": { "message": "高级配置" },
   "lblRejectAddr": { "message": "拒绝地址" },
   "descRejectAddr": { "message": "发送到此地址的连接将被立即阻断。" },
-  "lblReqMonitor": { "message": "请求监视器" },
+  "lblReqMonitor": { "message": "请求查看器" },
   "descReqMonitor": { "message": "记录实时请求及其匹配的代理规则。" },
   "lblContextMenu": { "message": "右键菜单" },
   "descContextMenu": { "message": "在浏览器右键菜单中显示代理选项。" },
@@ -92,9 +92,9 @@
   "lblVersion": { "message": "扩展版本" },
   "descVersion": { "message": "Oasis当前版本" },
   "lblRepo": { "message": "Github 仓库" },
-  "descRepo": { "message": "源代码和贡献。" },
-  "lblWiki": { "message": "Wiki 文档" },
-  "descWiki": { "message": "文档和指南。" },
+  "descRepo": { "message": "源代码仓库地址。" },
+  "lblWiki": { "message": "Wiki" },
+  "descWiki": { "message": "帮助文档" },
   "themeLight": { "message": "亮色" },
   "themeDark": { "message": "暗色" },
   "themeSystem": { "message": "系统" },
@@ -105,18 +105,18 @@
   "msgGroupCreated": { "message": "代理组已创建" },
   "msgTagSaved": { "message": "标签已保存" },
   "msgTagDeleted": { "message": "标签已删除" },
-  "btnCancel": { "message": "取消" },
-  "btnConfirm": { "message": "确认" },
-  "btnSave": { "message": "保存" },
+  "btnCancel": { "message": "取 消" },
+  "btnConfirm": { "message": "确 认" },
+  "btnSave": { "message": "保 存" },
   "btnRename": { "message": "重命名" },
-  "btnClone": { "message": "克隆" },
-  "btnDelete": { "message": "删除" },
+  "btnClone": { "message": "克 隆" },
+  "btnDelete": { "message": "删 除" },
   "lblName": { "message": "名称" },
   "lblPort": { "message": "端口" },
   "lblUsername": { "message": "用户名" },
   "lblPassword": { "message": "密码" },
   "lblProtocol": { "message": "协议" },
-  "phHeaderConn": { "message": "连接详情" },
+  "phHeaderConn": { "message": "连接配置" },
   "phHeaderAuth": { "message": "认证 (可选)" },
   "phDescAuth": { "message": "如果不需要，请留空" },
   "phHeaderBypass": { "message": "绕过规则" },
@@ -125,7 +125,7 @@
   "phHeaderAdvanced": { "message": "高级协议覆盖" },
   "phLabelHost": { "message": "主机地址" },
   "phLabelProxyProtocol": { "message": "代理协议" },
-  "phLabelShowPopup": { "message": "在弹窗中显示" },
+  "phLabelShowPopup": { "message": "在Popup中显示选项" },
   "phTitleShowPopup": { "message": "是否在扩展弹窗页面中显示" },
   "phPlaceholderHost": { "message": "example.com 或 1.2.3.4" },
   "phPlaceholderOptional": { "message": "可选" },
@@ -147,7 +147,7 @@
   "pocmDescAuto": { "message": "灵活的规则集" },
   "pocmDescPac": { "message": "自定义 JS 脚本" },
   "pgcmTitle": { "message": "添加代理主机组" },
-  "pgcmPlaceholderName": { "message": "例如：故障转移组 1" },
+  "pgcmPlaceholderName": { "message": "例如：US. fallback " },
   "pgcmDescName": { "message": "用于标识代理组的名称。" },
   "lblUntitled": { "message": "无标题" },
   "lblRequestsSuffix": { "message": "个请求" },
@@ -183,7 +183,7 @@
   "bpmSelectTarget": { "message": "-- 选择目标代理 --" },
   "bpmDescFrom": { "message": "使用此代理的规则将被替换。" },
   "bpmDescTo": { "message": "规则将更改为使用此代理。" },
-  "btnReplace": { "message": "替换" },
+  "btnReplace": { "message": "替 换" },
   "pmmTitle": { "message": "合并策略" },
   "pmmLabelSource": { "message": "源策略" },
   "pmmSelectSource": { "message": "-- 选择要合并的策略 --" },
@@ -198,7 +198,7 @@
   "pmmOptionOverwrite": { "message": "覆盖" },
   "pmmDescOverwrite": { "message": "替换冲突" },
   "pmmDescConflict": { "message": "如何处理具有相同类型和模式的规则。" },
-  "btnMerge": { "message": "合并" },
+  "btnMerge": { "message": "合 并" },
   "spTitle": { "message": "下载内容" },
   "spPlaceholderFilter": { "message": "按名称或网址筛选..." },
   "spMsgNoDownloads": { "message": "过去 7 天内无下载记录。" },
@@ -258,8 +258,8 @@
   "descAutoSync": { "message": "自动在设备间同步设置。" },
   "lblMaintenance": { "message": "维护" },
   "descMaintenance": { "message": "管理配置数据。" },
-  "btnImport": { "message": "导入" },
-  "btnExport": { "message": "导出" },
+  "btnImport": { "message": "导 入" },
+  "btnExport": { "message": "导 出" },
   "btnClearLocal": { "message": "清除本地" },
   "btnClearSync": { "message": "清除同步" },
   "lblLocalVersion": { "message": "本地版本" },
@@ -304,8 +304,8 @@
   "msgRulesAddedTemp": { "message": "$COUNT$ 条规则已添加到会话（临时）", "placeholders": { "count": { "content": "$1" } } },
   "msgRulesAddedPolicy": { "message": "$COUNT$ 条规则已添加到 $POLICY$", "placeholders": { "count": { "content": "$1" }, "policy": { "content": "$2" } } },
   "msgCopiedGeneric": { "message": "已复制到剪贴板" },
-  "btnResetSimple": { "message": "重置" },
-  "btnRefresh": { "message": "刷新" },
+  "btnResetSimple": { "message": "重 置" },
+  "btnRefresh": { "message": "刷 新" },
   "lblChooseColor": { "message": "选择颜色" },
   "pacPlaceholderUrl": { "message": "https://example.com/config.pac" },
   "pacPlaceholderScript": { "message": "// 在此输入 PAC 脚本\nfunction FindProxyForURL(url, host) {\n  return 'DIRECT';\n}" },
@@ -323,9 +323,9 @@
   "pacMsgDeleted": { "message": "PAC 脚本已删除" },
   "pacMsgSaveBeforeRenaming": { "message": "重命名前请先保存或重置更改" },
   "pacMsgSaveBeforeCloning": { "message": "克隆前请先保存或重置更改" },
-  "pgHeaderFallback": { "message": "故障转移组" },
+  "pgHeaderFallback": { "message": "Fallback组" },
   "pgHeaderStrategy": { "message": "终止策略" },
-  "pgLabelFinalFallback": { "message": "最终回退" },
+  "pgLabelFinalFallback": { "message": "最终处理选项" },
   "pgDescFinalFallback": { "message": "当链中所有代理都失败时采取的操作。" },
   "pgTitleEnableFallback": { "message": "启用回退策略" },
   "pgHeaderOrder": { "message": "顺序" },
@@ -352,7 +352,7 @@
   "rscmLabelUrl": { "message": "规则集 URL" },
   "rscmLabelLastUpdated": { "message": "最后更新" },
   "rscmLabelContent": { "message": "下载的内容" },
-  "rscmBtnUpdate": { "message": "更新" },
+  "rscmBtnUpdate": { "message": "更 新" },
   "rscmBtnUpdating": { "message": "更新中..." },
   "rscmMsgNever": { "message": "从未" },
   "armTitle": { "message": "接受规则" },
@@ -361,10 +361,10 @@
   "armPlaceholderTarget": { "message": "-- 选择目标策略 --" },
   "armLabelConflict": { "message": "冲突解决" },
   "armOptIgnore": { "message": "忽略重复" },
-  "armDescIgnore": { "message": "保留现有" },
+  "armDescIgnore": { "message": "保留目标策略中已有的规则，不添加源规则中的重复规则" },
   "armOptOverwrite": { "message": "覆盖" },
-  "armDescOverwrite": { "message": "替换现有" },
-  "armBtnConfirm": { "message": "确认" },
+  "armDescOverwrite": { "message": "将源规则中的规则覆盖到目标策略中" },
+  "armBtnConfirm": { "message": "确 认" },
   "smmmTitle": { "message": "合并规则" },
   "smmmSectionTarget": { "message": "目标策略" },
   "smmmSectionSource": { "message": "源规则" },
@@ -375,7 +375,7 @@
   "smmmDescOptimization": { "message": "规则已自动优化，合并前可在此进一步编辑。" },
   "smmmBtnMerge": { "message": "合并 $COUNT$ 条规则", "placeholders": { "count": { "content": "$1" } } },
   "pgTitleAddProxy": { "message": "添加到组" },
-  "btnRemove": { "message": "移除" },
+  "btnRemove": { "message": "移 除" },
   "pgOptionUnknownProxy": { "message": "未知代理" },
   "optWildcard": { "message": "通配符" },
   "optRegex": { "message": "正则" },
@@ -387,12 +387,12 @@
   "phRuleSet": { "message": "https://example.com/rules.txt" },
   "phDefaultPattern": { "message": "匹配模式..." },
   "tempTitleUnavailable": { "message": "临时规则不可用" },
-  "btnAccept": { "message": "接受" },
+  "btnAccept": { "message": "接 受" },
   "tooltipAcceptMove": { "message": "接受 (移动到策略)" },
   "msgPolicyNotFound": { "message": "未找到目标策略" },
   "rscmMsgNoContent": { "message": "暂无内容" },
 
-  "btnClose": { "message": "关闭" },
+  "btnClose": { "message": "关 闭" },
   "unnamedPolicy": { "message": "未命名策略" },
   "prmTitle": { "message": "重命名代理" },
   "prmLabelOriginal": { "message": "原名称" },
