refactor: extract common modal and detail view UI into reusable base components.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -73,7 +73,7 @@
   "prioReject": { "message": "Reject" },
   "prioNormal": { "message": "Normal" },
   "prioTemp": { "message": "Temporary" },
-  "btnReset": { "message": "Reset to Default" },
+  "btnReset": { "message": "Reset" },
   "lblRefreshSwitch": { "message": "Refresh On Switch" },
   "descRefreshSwitch": { "message": "Automatically refresh tab when switch proxy." },
   "sectionAdvanced": { "message": "Advanced Configuration" },
