feat: Update UI styling, add new icons, refactor i18n usage, and remove unused content script.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -12,7 +12,7 @@
     "description": "Context menu item to add domain"
   },
   "directConnect": {
-    "message": "Direct Connect"
+    "message": "Direct"
   },
   "systemProxy": {
     "message": "System Proxy"
