--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -293,6 +293,9 @@
   "msgSyncConflict": {
     "message": "The version in the cloud is newer than your local version. Please choose which version to keep."
   },
+  "msgSyncConflictStatus": {
+    "message": "Automatic sync was disabled to prevent overwriting cloud data. Please resolve the conflict in settings before re-enabling."
+  },
   "lblThisDevice": { "message": "This device" },
   "lblRemoteRepo": { "message": "Remote repository" },
 
