--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -456,5 +456,46 @@
   "appmBtnCopy": { "message": "复制到剪贴板" },
   "appmDesc": {
     "message": "预览转换为 AutoProxy 格式的规则。仅包含通配符和正则规则，不包含 IP/CIDR 规则。"
-  }
+  },
+
+  "afmTitle": { "message": "策略助手" },
+  "afmSubtitleSetup": { "message": "第 1 步 — 配置调试参数" },
+  "afmSubtitleRunning": { "message": "第 2 步 — 自动路由失败域名" },
+  "afmLabelProxy": { "message": "选择代理" },
+  "afmPlaceholderProxy": { "message": "请选择代理..." },
+  "afmDescProxy": { "message": "失败的域名将通过此代理转发。" },
+  "afmLabelMaxRetries": { "message": "最大轮次" },
+  "afmLabelWaitWindow": { "message": "等待窗口" },
+  "afmDescInfo": { "message": "AutoFix 会重新加载选中的标签页，收集失败请求，并将通配符规则添加到临时会话中，直到无新错误或达到最大轮次为止。" },
+  "afmStatusRunning": {
+    "message": "第 $ROUND$ / $MAX$ 轮 — 等待页面加载...",
+    "placeholders": { "round": { "content": "$1" }, "max": { "content": "$2" } }
+  },
+  "afmStatusDone": { "message": "✓ 修复完成 — 无新错误" },
+  "afmStatusFailed": {
+    "message": "✕ 已达最大轮次（$MAX$）",
+    "placeholders": { "max": { "content": "$1" } }
+  },
+  "afmStatusStopped": { "message": "● 已停止" },
+  "afmLabelLastAdded": { "message": "本轮新增" },
+  "afmLabelAllFixed": {
+    "message": "已修复域名（$COUNT$ 个）",
+    "placeholders": { "count": { "content": "$1" } }
+  },
+  "afmMsgWaiting": { "message": "等待错误事件..." },
+  "afmBtnStart": { "message": "开始" },
+  "afmBtnStop": { "message": "停止" },
+  "afmBtnRetry": { "message": "重试" },
+  "afmBtnViewRules": { "message": "查看临时规则" },
+  "tooltipAutoFix": { "message": "Policy Assistant — 自动将失败域名路由到代理" },
+  "afmLabelTargetUrl": { "message": "目标 URL" },
+  "afmLabelRoundHistory": { "message": "轮次记录" },
+  "afmRoundBadge": {
+    "message": "第 $ROUND$ 轮",
+    "placeholders": { "round": { "content": "$1" } }
+  },
+  "afmRoundCaptured": { "message": "本轮捕获错误" },
+  "afmRoundFixed": { "message": "本轮新增路由" },
+  "afmLabelFixedWithRound": { "message": "已路由域名" },
+  "lblTabClosed": { "message": "已关闭" }
 }
