feat: Add changelog link to general settings and prevent auto-opening the changelog tab in development mode.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -97,6 +97,8 @@
   "descRepo": { "message": "Source code and contributions." },
   "lblWiki": { "message": "Wiki Address" },
   "descWiki": { "message": "Documentation and guides." },
+  "lblChangelog": { "message": "Changelog" },
+  "descChangelog": { "message": "See what's new in this release" },
   "themeLight": { "message": "Light" },
   "themeDark": { "message": "Dark" },
   "themeSystem": { "message": "System" },
