--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -93,8 +93,10 @@
   "descVersion": { "message": "Oasis当前版本" },
   "lblRepo": { "message": "Github 仓库" },
   "descRepo": { "message": "源代码仓库地址。" },
-  "lblWiki": { "message": "Wiki" },
-  "descWiki": { "message": "帮助文档" },
+  "lblWiki": { "message": "文档" },
+  "descWiki": { "message": "深入了解使用方法和进阶选项" },
+  "lblChangelog": { "message": "更新日志" },
+  "descChangelog": { "message": "查看当前版本的更新内容" },
   "themeLight": { "message": "亮色" },
   "themeDark": { "message": "暗色" },
   "themeSystem": { "message": "系统" },
