feat: Add manual update for external policies with error reporting and refine policy dirty state check.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -143,6 +143,11 @@
   "phMsgRenamed": { "message": "Proxy renamed successfully" },
   "phMsgCloned": { "message": "Proxy cloned successfully" },
   "phMsgDeleted": { "message": "Proxy deleted successfully" },
+  "msgUpdateAllSuccess": { "message": "External policies updated successfully" },
+  "msgUpdateAllFailed": { "message": "Failed to update external policies" },
+  "btnUpdateAllRuleSets": { "message": "Update External Policies" },
+  "lblUpdateAllRules": { "message": "Update External Policies" },
+  "descUpdateAllRules": { "message": "Immediately fetch and update remote PAC scripts and RuleSets for all policies." },
   "phDefault": { "message": "Default" },
   "pcmTitle": { "message": "Add Proxy Host" },
   "pcmPlaceholderName": { "message": "e.g. Office Proxy" },
