--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -141,6 +141,11 @@
   "phMsgRenamed": { "message": "代理已重命名" },
   "phMsgCloned": { "message": "代理已克隆" },
   "phMsgDeleted": { "message": "代理已删除" },
+  "msgUpdateAllSuccess": { "message": "已成功更新外部策略" },
+  "msgUpdateAllFailed": { "message": "更新外部策略失败" },
+  "btnUpdateAllRuleSets": { "message": "更新外部策略" },
+  "lblUpdateAllRules": { "message": "更新外部策略" },
+  "descUpdateAllRules": { "message": "立即获取并更新所有策略中的远程 PAC 脚本和规则集。" },
   "phDefault": { "message": "默认" },
   "pcmTitle": { "message": "添加代理主机" },
   "pcmPlaceholderName": { "message": "例如：公司代理" },
