feat: introduce deep equality check for dirty state tracking and enhance policy ruleset UI with update status and actions

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -525,5 +525,8 @@
   "afmRoundCaptured": { "message": "Captured errors" },
   "afmRoundFixed": { "message": "Newly routed" },
   "afmLabelFixedWithRound": { "message": "Routed Domains" },
+  "lblUpdate": { "message": "Update" },
+  "lblLastUpdated": { "message": "Updated:" },
+  "lblView": { "message": "View" },
   "lblTabClosed": { "message": "Closed" }
 }
